<resources>
    <string name="beauty">Beauty</string>
    <string name="makeup">Makeup</string>
    <string name="gesture">Gesture</string>
    <string name="take_photo">TakePhoto</string>
    <string name="beauty_skin">Skin</string>
    <string name="beauty_shape">Reshape</string>
    <string name="beauty_hair">Hair</string>
    <string name="beauty_makeup">Makeup</string>
    <string name="beauty_makeup_style">MakeupStyle</string>
    <string name="beauty_body">Body</string>
    <string name="beauty_style">Style</string>
    <string name="reset">Restore</string>
    <string name="is_reset_to_default">Reset all parameters in this module to default?</string>
    <string name="is_reset_to_default_all">Reset all parameters to default？</string>
    <string name="confirm">Yes</string>
    <string name="cancel">No</string>
    <string name="face_beauty">FaceBeauty</string>
    <string name="face_beauty_and_shape">FaceBeauty</string>
    <string name="whiteness">Whiteness</string>
    <string name="blurriness">Exfoliating</string>
    <string name="precise_skin">PreciseSkin</string>
    <string name="rosiness">Ruddy</string>
    <string name="clearness">Distinctive</string>
    <string name="brightness">Brightness</string>
    <string name="face_shape">FaceShape</string>
    <string name="eye_enlarging">Big eye</string>
    <string name="cheek_thinning">Thin face</string>
    <string name="cheek_narrowing">Narrow face</string>
    <string name="cheek_bone_thinning">Cheekbones</string>
    <string name="jaw_bone_thinning">Lower jaw</string>
    <string name="temple_enlarging">Temple</string>
    <string name="head_lessening">Small head</string>
    <string name="face_lessening">Small face</string>
    <string name="chin_trimming">Chin</string>
    <string name="philtrum_trimming">Shrink in</string>
    <string name="forehead_trimming">Hairline</string>
    <string name="eye_sapcing">Eye spacing</string>
    <string name="eye_corner_trimming">Eye corner</string>
    <string name="eye_corner_enlarging">Canthus</string>
    <string name="nose_enlarging">Long nose</string>
    <string name="nose_thinning">Thin nose</string>
    <string name="nose_apex_lessening">Nose</string>
    <string name="nose_root_enlarging">Flocks</string>
    <string name="mouth_trimming">Mouth</string>
    <string name="mouth_smiling">Smiling lips</string>
    <string name="undereye_circles">Black eye</string>
    <string name="short_face">Short face</string>
    <string name="nasolabial_fold">Wrinkles</string>
    <string name="lipstick">Lipstick</string>
    <string name="eyebrow">Eye Brow</string>
    <string name="blush">Blush</string>
    <string name="eyeshadow">Eye Shadow</string>
    <string name="eyeline">Eye Line</string>
    <string name="eyelash">Eye Lash</string>
    <string name="beautypupils">Beauty Pupils</string>
    <string name="longleg">Long Leg</string>
    <string name="thin">Thin</string>
    <string name="filter">Filter</string>
    <string name="beauty_filter">BeautyFilter</string>
    <string name="name_chunzhen" translatable="false">chunzhen</string>
    <string name="name_white" translatable="false">white</string>
    <string name="name_qingxin" translatable="false">qingxin</string>
    <string name="name_romantic" translatable="false">langman</string>
    <string name="name_rixi" translatable="false">rixi</string>
    <string name="name_qingliang" translatable="false">qingliang</string>
    <string name="name_bailan" translatable="false">bailan</string>
    <string name="name_landiao" translatable="false">landiao</string>
    <string name="name_chaotuo" translatable="false">chaotuo</string>
    <string name="name_fennen" translatable="false">fennen</string>
    <string name="name_standard_filter" translatable="false">biaozhun</string>
    <string name="name_huaijiu" translatable="false">huaijiu</string>
    <string name="name_weimei" translatable="false">weimei</string>
    <string name="name_xiangfen" translatable="false">xiangfen</string>
    <string name="name_yinghong" translatable="false">yinghong</string>
    <string name="name_yuanqi" translatable="false">yuanqi</string>
    <string name="name_yunshang" translatable="false">yunshang</string>
    <string name="arprops">ARProps</string>
    <string name="sticker">Sticker</string>
    <string name="face">Face</string>
    <string name="mask">Mask</string>
    <string name="gift">Gift</string>
    <string name="hair_none">NONE</string>
    <string name="hair_shenmizi">shenmizi</string>
    <string name="hair_qiaokeli">qiaokeli</string>
    <string name="hair_qingmuzong">qingmuzong</string>
    <string name="hair_jiaotangzong">jiaotangzong</string>
    <string name="hair_fengmichunzong">fengmichunzong</string>
    <string name="hair_qianjinzong">qianjinzong</string>
    <string name="hair_meiguijin">meiguijin</string>
    <string name="hair_yamabaijin">yamabaijin</string>
    <string name="hair_luoriju">luoriju</string>
    <string name="hair_yamaqianju">yamaqianju</string>
    <string name="hair_fugumeigui">fugumeigui</string>
    <string name="hair_shenmeigui">shenmeigui</string>
    <string name="hair_yanhuiwuzi">yanhuiwuzi</string>
    <string name="hair_fenmeitianzong">fenmeitianzong</string>
    <string name="hair_wumaixiangyu">wumaixiangyu</string>
    <string name="hair_kongquelan">kongquelan</string>
    <string name="hair_wumailanhui">wumailanhui</string>
    <string name="hair_yamahuizong">yamahuizong</string>
    <string name="hair_yamaqianhui">yamaqianhui</string>
    <string name="watermark">Watermark</string>
    <string name="portrait">Portrait</string>
    <string name="portrait_ai">AIProprait</string>
    <string name="portrait_green">GreenProprait</string>
    <string name="portrait_people">PeopleProprait</string>
    <string name="none">NONE</string>
    <string name="delete">delete</string>
    <string name="name_none" translatable="false">""</string>
    <string name="blurriness_vague">Hazy</string>
    <string name="blurriness_precise">Fine</string>
    <string name="v_face">V face</string>
    <string name="forehead">Forehead</string>
    <string name="circle_eye">Round eyes</string>
    <string name="style_jingdian">Style1</string>
    <string name="style_tianxin">Style10</string>
    <string name="style_qing_leng">Style9</string>
    <string name="style_weisuyan">Style8</string>
    <string name="style_zhigan">Style7</string>
    <string name="style_chulian">Style6</string>
    <string name="style_riza">Style5</string>
    <string name="style_fugu">Style4</string>
    <string name="style_nvsheng">Style3</string>
    <string name="style_wanghong">Style2</string>
    <string name="makeup_qcbh">CM01</string>
    <string name="makeup_hxmr">CM02</string>
    <string name="makeup_qtz">CM03</string>
    <string name="makeup_bl">CM04</string>
    <string name="makeup_ld">CM05</string>
    <string name="makeup_yqsn">CM06</string>
    <string name="makeup_nt">CM07</string>
    <string name="makeup_cyz">CM08</string>
    <string name="beauty_filter_ziran1">ziran1</string>
    <string name="beauty_filter_ziran2">ziran2</string>
    <string name="beauty_filter_ziran3">ziran3</string>
    <string name="beauty_filter_ziran4">ziran4</string>
    <string name="beauty_filter_ziran5">ziran5</string>
    <string name="beauty_filter_ziran6">ziran6</string>
    <string name="beauty_filter_yuese">yuese</string>
    <string name="beauty_filter_yuehui">yuehui</string>
    <string name="beauty_filter_riguang">riguang</string>
    <string name="beauty_filter_luoxia">luoxia</string>
    <string name="beauty_filter_zhigan1">质感1</string>
    <string name="beauty_filter_zhigan2">质感2</string>
    <string name="beauty_filter_zhigan3">质感3</string>
    <string name="beauty_filter_zhigan4">质感4</string>
    <string name="beauty_filter_zhigan5">质感5</string>
    <string name="beauty_filter_shadow1">shadow1</string>
    <string name="beauty_filter_shadow2">shadow2</string>
    <string name="beauty_filter_shadow3">shadow3</string>
    <string name="beauty_filter_shadow4">shadow4</string>
    <string name="beauty_filter_yueye">yueye</string>
    <string name="beauty_filter_micha">micha</string>
    <string name="beauty_filter_jingmi">jingmi</string>
    <string name="beauty_filter_rouguang">rouguang</string>
    <string name="beauty_filter_naixing">naixing</string>
    <string name="beauty_filter_yanse">yanse</string>
    <string name="beauty_filter_qingwu">qingwu</string>
    <string name="beauty_filter_qingbao">qingbao</string>
    <string name="beauty_filter_huanzi">huanzi</string>
    <string name="beauty_filter_huanse">huanse</string>
    <string name="beauty_filter_jiuzhao">jiuzhao</string>
    <string name="beauty_filter_mihuan">mihuan</string>
    <string name="beauty_filter_yicai">yicai</string>
    <string name="beauty_filter_chunhui">chunhui</string>
    <string name="beauty_filter_guangyun">guangyun</string>
    <string name="beauty_filter_rouwu">rouwu</string>
    <string name="beauty_filter_zhishedeng">zhishedeng</string>
    <string name="beauty_filter_chuchun">chuchun</string>
    <string name="beauty_filter_chulian">chulian</string>
    <string name="beauty_filter_chuxue">chuxue</string>
    <string name="beauty_filter_fenci">fenci</string>
    <string name="beauty_filter_lengdong">lengdong</string>
    <string name="beauty_filter_mengjing">mengjing</string>
    <string name="beauty_filter_qingtou">qingtou</string>
    <string name="beauty_filter_xinye">xinye</string>
    <string name="beauty_filter_bingcha">bingcha</string>
    <string name="beauty_filter_langman">langman</string>
    <string name="beauty_filter_miwu">miwu</string>
    <string name="beauty_filter_qingmu">qingmu</string>
    <string name="beauty_filter_qingsha">qingsha</string>
    <string name="beauty_filter_qingxu">qingxu</string>
    <string name="beauty_filter_senwu">senwu</string>
    <string name="beauty_filter_shaman">shaman</string>
    <string name="beauty_filter_wenrou">wenrou</string>
    <string name="beauty_filter_miaohui">miaohui</string>
    <string name="beauty_filter_qingkong">qingkong</string>
    <string name="beauty_filter_shanjian">shanjian</string>
    <string name="beauty_filter_xiangsong">xiangsong</string>
    <string name="beauty_filter_biaozhun">biaozhun</string>
    <string name="beauty_filter_shuiguang">shuiguang</string>
    <string name="beauty_filter_shuiwu">shuiwu</string>
    <string name="beauty_filter_lengdan">lengdan</string>
    <string name="beauty_filter_bailan">bailan</string>
    <string name="beauty_filter_chunzhen">chunzhen</string>
    <string name="beauty_filter_chaotuo">chaotuo</string>
    <string name="beauty_filter_senxi">senxi</string>
    <string name="beauty_filter_nuanyang">nuanyang</string>
    <string name="beauty_filter_xiari">xiari</string>
    <string name="beauty_filter_mitaowulong">mitaowulong</string>
    <string name="beauty_filter_shaonv">shaonv</string>
    <string name="beauty_filter_yuanqi">yuanqi</string>
    <string name="beauty_filter_feiying">feiying</string>
    <string name="beauty_filter_qingxin">qingxin</string>
    <string name="beauty_filter_rixi">rixi</string>
    <string name="beauty_filter_fanchase">fanchase</string>
    <string name="beauty_filter_fugu">fugu</string>
    <string name="beauty_filter_huiyi">huiyi</string>
    <string name="beauty_filter_huaijiu">huaijiu</string>
    <string name="filter_style">StyleFilter</string>
    <string name="filter_special">SpecialFilter</string>
    <string name="effect_none">Original</string>
    <string name="makeup_none">Original</string>
    <string name="filter_none">Orignal</string>
    <string name="effect_lhcq">lhcq</string>
    <string name="effect_hbdy">hbdy</string>
    <string name="restore">Restore</string>
    <string name="similarity">Similarity</string>
    <string name="smoothness">Smoothness</string>
    <string name="alpha">Alpha</string>
    <string name="decolor">Decolor</string>
</resources>