<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:background="#80000000"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:clickable="true"
    android:paddingTop="30dp"
    android:orientation="horizontal">

<!--    <HorizontalScrollView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btn_beauty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beauty"
                android:drawablePadding="16dp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_func_beauty" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btn_arprops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arprops"
                android:drawablePadding="16dp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_func_arprops" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btn_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portrait_ai"
                android:drawablePadding="16dp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_func_aiportrait" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btn_gesture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gesture"
                android:drawablePadding="16dp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_func_gesture" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btn_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:drawablePadding="16dp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_func_filter" />




        </LinearLayout>




<!--    </HorizontalScrollView>-->








</LinearLayout>