<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.motion.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionContainer"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/item_blurriness_scene">

    <LinearLayout
        android:id="@+id/widget"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_blur"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/htImageIV"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@null" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_label"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:clickable="true"
                android:text="@string/blurriness"
                android:lines="1"
                android:ellipsize="end"
                android:layout_marginTop="12dp" />


            <View
                android:id="@+id/point"
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:visibility="invisible"
                android:backgroundTint="@color/ht_selected"
                android:background="@drawable/bg_circle_round"
                android:layout_marginTop="6dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_vague_blurriness"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_vague_blurriness"
                android:layout_width="48dp"
                android:src="@drawable/ic_blurrness_vague_white"
                android:layout_height="48dp"
                android:contentDescription="@null" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_vague_blurriness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textSize="12sp"
                tools:text="Text"
                android:clickable="true"
                android:text="@string/blurriness_vague"
                android:lines="1"
                android:textColor="@color/light_background"
                android:layout_marginTop="12dp" />

            <View
                android:id="@+id/point_vague_blurriness"
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:backgroundTint="@color/theme_color"
                android:background="@drawable/bg_circle_round"
                android:layout_marginTop="6dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="68dp"
            android:id="@+id/btn_precise_blurriness"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_precise_blurriness"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_blurrness_precise_white"
                android:contentDescription="@null" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_precise_blurriness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textSize="12sp"
                tools:text="Text"
                android:clickable="true"
                android:lines="1"
                android:text="@string/blurriness_precise"
                android:textColor="@color/light_background"
                android:layout_marginTop="12dp" />

            <View
                android:id="@+id/point_precise_blurriness"
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:backgroundTint="@color/theme_color"
                android:background="@drawable/bg_circle_round"
                android:layout_marginTop="6dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:orientation="horizontal"
            android:gravity="center">

            <View
                android:layout_width="3dp"
                android:layout_height="3dp"
                android:backgroundTint="@color/theme_color"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_circle_round" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.motion.MotionLayout>